[metadata]
name = plistrc
version = 20241013
description = Property List file resources (plistrc)
long_description = plistrc is a Python module part of plist-kb to allow reuse of Property List file resources.
long_description_content_type = text/plain
url = https://github.com/libyal/plist-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  plistrc = plistrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/decode.py
  scripts/extract.py

[options.package_data]
plistrc =
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
